[gd_scene load_steps=6 format=2]

[ext_resource path="res://squiggle2.png" type="Texture" id=1]
[ext_resource path="res://squiggle1.png" type="Texture" id=2]
[ext_resource path="res://Food.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.70216
height = 22.0

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "squirm1",
"speed": 3.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "squirm2",
"speed": 5.0
} ]

[node name="Food" type="RigidBody2D" groups=["food", "mobs"]]
position = Vector2( 46, 43 )
contact_monitor = true
script = ExtResource( 6 )

[node name="FoodCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
rotation = 0.618767
shape = SubResource( 2 )

[node name="FoodVisNotice2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2, 1 )
rotation = 0.669493
scale = Vector2( 1.0244, 1.68425 )

[node name="FoodSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.52588e-05, 7.62939e-06 )
scale = Vector2( 0.04, 0.04 )
frames = SubResource( 1 )
animation = "squirm2"
speed_scale = 2.0
playing = true
flip_h = true
flip_v = true

[connection signal="body_entered" from="." to="." method="_on_Food_body_entered"]
[connection signal="screen_exited" from="FoodVisNotice2D" to="." method="_on_FoodVisNotice2D_screen_exited"]
